# DramaChecker

./: .gitignore  README.md  ROADMAP.md  STATUS.md  main.py  pyproject.toml  spec.md  users.example.json  users.json
prd/: 001-auto-cookie-login-prd.md  002-auth-retry-for-first-series-prd.md  003-strict-episode-label-parsing-prd.md  004-final-episode-label-parsing-prd.md
tests/: test_auth_session.py  test_smoke.py
