[project]
name = "dramachecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

